Update notebook entry

--- a/logbook.tex
+++ b/logbook.tex
@@ -34,6 +34,7 @@ To do it well i have to make more research on my subject, but i don't find that 
 \subsubsection{Done}
 i have found 3-4 use full resources, but not directly about my subject. Some are about parsing, others are more specific about parsing in compilation but nothing about speed up syntax analysis in dynamic context (writing on your keyboard)\\
 i have finish my plan for my presentation, i need made it now
+
 \subsection{\date{Sunday, March 22, 2015}}
 Today i need to make the slide for the presentation, i have plan 10 slide, i think it will be not to much but enough.
 \subsubsection{To do}
@@ -43,6 +44,7 @@ Today i need to make the slide for the presentation, i have plan 10 slide, i thi
 \end{itemize}
 \subsubsection{Done}
 I have done 14 slide, it's a lot but i don't know how to reduce. after a first try I'm very close to the 5minutes, but i need to practice more for being sure to be below.
+
 \subsection{\date{Monday, March 23, 2015}}
 I have to do more research, i will use the university network to access to some paper i can't access in my home.
 \subsubsection{To do}
@@ -51,6 +53,27 @@ I have to do more research, i will use the university network to access to some 
 \item Prepare my presentation
 \end{itemize}
 \subsubsection{Done}
+\item I found some more interesting paper
+\item I change a little my bibliography and my presentation
+
+\subsection{\date{Thursday, March 26, 2015}}
+Day of my 5min presentation
+\subsubsection{To do}
+\begin{itemize}
+\item Practice more before the presentation
+\end{itemize}
+\subsubsection{Done}
+\item My presentation have been doing well, i hope i will get a good mark
+
+\subsection{\date{Tuesday, April 7, 2015}}
+Deadline for the annotated bibliography
+\subsubsection{To do}
+\begin{itemize}
+\item Finishing and do little correction on my annotated bibliography
+\end{itemize}
+\subsubsection{Done}
+\item Little correction on the formatting
+
 \section{Reference}
 \nocite{*}
  
