--- a/logbook.tex
+++ b/logbook.tex
@@ -53,8 +53,10 @@ I have to do more research, i will use the university network to access to some 
 \item Prepare my presentation
 \end{itemize}
 \subsubsection{Done}
+\begin{itemize}
 \item I found some more interesting paper
 \item I change a little my bibliography and my presentation
+\end{itemize}
 
 \subsection{\date{Thursday, March 26, 2015}}
 Day of my 5min presentation
@@ -63,7 +65,9 @@ Day of my 5min presentation
 \item Practice more before the presentation
 \end{itemize}
 \subsubsection{Done}
-\item My presentation have been doing well, i hope i will get a good mark
+\begin{itemize}
+\item My presentation have been doing well, i hope i will get a good mark 
+\end{itemize}
 
 \subsection{\date{Tuesday, April 7, 2015}}
 Deadline for the annotated bibliography
@@ -72,7 +76,9 @@ Deadline for the annotated bibliography
 \item Finishing and do little correction on my annotated bibliography
 \end{itemize}
 \subsubsection{Done}
+\begin{itemize}
 \item Little correction on the formatting
+\end{itemize}
 
 \section{Reference}
 \nocite{*}
