Adding background section and table of contents

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -24,14 +24,14 @@
   year={2002}
 },
 
-@misc{1_panopticoncentral.net_2009,
+@misc{panopticoncentral_2009,
 author={Panopticoncentral.net,},
 title={LL vs. LR vs. GLR | Panopticon Central},
 url={http://www.panopticoncentral.net/2009/03/13/ll-vs-lr-vs-glr/},
 year={2009}
 },
 
-@misc{2_web.stanford.edu_2012,
+@misc{stanford.edu_2012,
 author={Web.stanford.edu,},
 title={CS143: Compilers},
 url={http://web.stanford.edu/class/archive/cs/cs143/cs143.1128/},
@@ -56,7 +56,7 @@ isbn = {0321486811}
   pages={58--70},
   year={1979},
   publisher={ACM}
-}
+},
 
 @inproceedings{huang2010dynamic,
   title={Dynamic programming for linear-time incremental parsing},
@@ -65,7 +65,7 @@ isbn = {0321486811}
   pages={1077--1086},
   year={2010},
   organization={Association for Computational Linguistics}
-}
+},
 
 @article{gopalratnam2007online,
   title={Online sequential prediction via incremental parsing: The active LeZi algorithm},
@@ -76,4 +76,33 @@ isbn = {0321486811}
   pages={52--58},
   year={2007},
   publisher={IEEE}
+},
+
+@article{knuth1971top,
+  title={Top-down syntax analysis},
+  author={Knuth, Donald E},
+  journal={Acta Informatica},
+  volume={1},
+  number={2},
+  pages={79--110},
+  year={1971},
+  publisher={Springer}
+},
+
+@misc{cfg_def,
+author={Cs.rochester.edu,},
+title={Context-Free Grammars},
+url={https://www.cs.rochester.edu/~nelson/courses/csc_173/grammars/cfg.html},
+year={2015}
+},
+
+@article{horspool1990incremental,
+  title={Incremental generation of LR parsers},
+  author={Horspool, R Nigel},
+  journal={Computer languages},
+  volume={15},
+  number={4},
+  pages={205--223},
+  year={1990},
+  publisher={Elsevier}
 }
