--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
 
 %in the preamble
@@ -11,7 +11,7 @@
 \addbibresource{bibfile.bib}
 %--------------------------------
 
-\title{Kent Project Research: In-line parsing}
+\title{Kent Project Research: On-line parsing}
 \author{Kevin PLATEL}
 \date{March 2015}
 
@@ -19,12 +19,11 @@
 % Title section
 \maketitle
 
-% Abstract
-\title{Abstract}
-% TODO
+% Abstract // TODO
+\renewcommand{\contentsname}{Abstract}
 
 % Index section
-\renewcommand{\contentsname}{Index}
+\renewcommand{\contentsname}{Table of contents}
 \tableofcontents
 
 \newpage{}
@@ -33,11 +32,27 @@
 \section{Introduction}
 \input{chapter/intro}
 
+% Objectives // TODO
+\section{Aims of the research}
+
+% Related Work // TODO
+\section{Related work}
+
 % Background
 \section{Background}
 \input{chapter/background}
 
-\section{Reference}
+% Approach // TODO
+\section{Reflexion and approach}
+
+% Experiment // TODO
+\section{Experimentation}
+
+\section{Result \& Conclusion}
+
+\section{And after}
+
+\section{References}
 \nocite{*}
  
 \printbibliography
