Adding resources section

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
+\usepackage{hyperref}
 
 %in the preamble
 %--------------------------------
@@ -51,6 +52,9 @@
 \section{Result \& Conclusion}
 
 \section{And after}
+
+\section{Link \& Resources}
+\input{chapter/resources}
 
 \section{References}
 \nocite{*}
