Modification of introduction and background

--- a/logbook.tex
+++ b/logbook.tex
@@ -80,6 +80,74 @@ Deadline for the annotated bibliography
 \item Little correction on the formatting
 \end{itemize}
 
+\subsection{\date{Monday, April 13, 2015}}
+After the dead line, i try to find more resources about my specific research because i think i didn't find the correct term.
+In a second time i start to read 'Parsing techniques : a practical guide', that will give me the terminology and the key to better understand the paper i read.
+\subsubsection{To do}
+\begin{itemize}
+\item Finding more resources
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I found interesting thing on 'dynamic parsing' and 'incremental parsing'
+\item My read on the book just begin but the definition and explanation of what is a grammar is very interesting
+\end{itemize}
+
+\subsection{\date{Wednesday, April 22, 2015}}
+I continue to read my book, but i finish the chapter on the grammar type
+\subsubsection{To do}
+\begin{itemize}
+\item Understand the limitation of each grammar
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I found that my research will focus on type 2 grammar or 'Context Free' grammar, which are easier to parse because each production rules contain only ONE non-terminal rules that produce terminal or non-terminal sequence.
+\end{itemize}
+
+\subsection{\date{Monday, April 27, 2015}}
+The finals are in 2 weeks, so i will put in pause the project until i pass my exams
+\subsubsection{To do}
+\begin{itemize}
+\item Nothing
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item Nothing
+\end{itemize}
+
+\subsection{\date{Friday, May 29, 2015}}
+The exams are finish, now i will start to write my introduction & background section
+\subsubsection{To do}
+\begin{itemize}
+\item Write a first version of my introduction & background
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I wrote my introduction, it's a little too short i think, and some English mistake are still in there so i need to go back on it, and my background section is just started, i really need to look more on other paper to see what to put in it.
+\end{itemize}
+
+\subsection{\date{Saturday, May 30, 2015}}
+To change a little, i will try to start a parser from scratch with the Dart programming language
+\subsubsection{To do}
+\begin{itemize}
+\item Write a scanner and a lexer in Dart
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I have a beginning of something, the most difficult part was to put the architecture to be sure it will be able to implement the 2 algorithm easily (mine and the most use algorithm for on-line parsing) but i think to have a good base.
+\end{itemize}
+
+\subsection{\date{Wednesday, June 17, 2015}}
+Meeting with my tutor to see what will be the early delivery to produce.
+\subsubsection{To do}
+\begin{itemize}
+\item See what i have to do (objective) for the end of June
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item The objective are to write the introduction and the background section
+\end{itemize}
+
 \section{Reference}
 \nocite{*}
  
