--- a/main.tex
+++ b/main.tex
@@ -32,16 +32,18 @@
 % Introduction
 \section{Introduction}
 \input{chapter/intro}
-
-% Objectives // TODO
-\section{Aims of the research}
-
-% Related Work // TODO
-\section{Related work}
+    % Objectives // TODO -> In introduction
+    \subsection{Aims of the research}
+    \input{chapter/aims_of_research}
 
 % Background
 \section{Background}
 \input{chapter/background}
+    
+    % Related Work // TODO -> In background
+    \subsection{Related work}
+    \input{chapter/related_work}
+
 
 % Approach // TODO
 \section{Reflexion and approach}
