Design section Introduction update

--- a/bibfile.bib
+++ b/bibfile.bib
@@ -18,7 +18,7 @@
  isbn = {9780387202488}
  },
  
- @article{vaidyanathan2002dynamic,
+@article{vaidyanathan2002dynamic,
   title={Dynamic parsing},
   author={Vaidyanathan, Shankar and Lucido, Philip and Bhatia, Sundeep},
   year={2002}
@@ -105,4 +105,65 @@ year={2015}
   pages={205--223},
   year={1990},
   publisher={Elsevier}
+},
+@article{chappelier1998generalized,
+  title={A Generalized CYK Algorithm for Parsing Stochastic CFG.},
+  author={Chappelier, Jean-C{\'e}dric and Rajman, Martin and others},
+  journal={TAPD},
+  volume={98},
+  number={133-137},
+  pages={5},
+  year={1998},
+  publisher={Citeseer}
+},
+
+@misc{1_wikipedia_2015,
+author={Wikipedia},
+title={Comparison of parser generators},
+url={https://en.wikipedia.org/wiki/Comparison_of_parser_generators},
+year={2015}
+},
+
+@book{2_chomsky,
+author={Chomsky, Noam},
+title={On certain formal properties of grammars},
+url={http://www.sciencedirect.com/science/article/pii/S0019995859903626}
+},
+
+@misc{3_cs.princeton.edu_2015,
+author={Cs.princeton.edu,},
+url={http://www.cs.princeton.edu/courses/archive/spr06/cos320/notes/7-LRtables.ppt},
+year={2015}
+},
+
+@misc{4_hackingoff.com_2012,
+author={Hackingoff.com,},
+title={EBNF to NFA for LR(0) and SLR(1) Grammars - Hacking Off},
+url={http://hackingoff.com/blog/ebnf-to-nfa-for-lr-0-and-slr-1-grammars/},
+year={2012}
+}
+
+@misc{Clang5:online,
+author = {},
+title = {Clang Static Analyzer},
+url = {http://clang-analyzer.llvm.org/},
+month = {},
+year = {},
+note = {(Visited on 08/16/2015)}
+}
+@misc{darta0:online,
+author = {},
+title = {dartanalyzer: The Static Analyzer | Dart},
+url = {https://www.dartlang.org/tools/analyzer/},
+month = {},
+year = {},
+note = {(Visited on 08/16/2015)}
+}
+@misc{golan5:online,
+author = {},
+title = {golang/lint},
+url = {https://github.com/golang/lint},
+month = {},
+year = {},
+note = {(Visited on 08/16/2015)}
 }
