--- a/logbook.tex
+++ b/logbook.tex
@@ -74,10 +74,12 @@ Deadline for the annotated bibliography
 \subsubsection{To do}
 \begin{itemize}
 \item Finishing and do little correction on my annotated bibliography
+\item See with me tutor what will be the early deliverable for the end of June
 \end{itemize}
 \subsubsection{Done}
 \begin{itemize}
 \item Little correction on the formatting
+\item I saw me tutor quickly, he told me that we will good to produce a introduction and background section
 \end{itemize}
 
 \subsection{\date{Monday, April 13, 2015}}
@@ -116,7 +118,7 @@ The finals are in 2 weeks, so i will put in pause the project until i pass my ex
 \end{itemize}
 
 \subsection{\date{Friday, May 29, 2015}}
-The exams are finish, now i will start to write my introduction & background section
+The exams are finish, now i will start to write my introduction \& background section
 \subsubsection{To do}
 \begin{itemize}
 \item Write a first version of my introduction & background
@@ -138,15 +140,169 @@ To change a little, i will try to start a parser from scratch with the Dart prog
 \end{itemize}
 
 \subsection{\date{Wednesday, June 17, 2015}}
-Meeting with my tutor to see what will be the early delivery to produce.
 \subsubsection{To do}
 \begin{itemize}
-\item See what i have to do (objective) for the end of June
+\item See what i have to do (objective) for the end of June even if he told me already but just to have confirmation, and talk about the project
 \end{itemize}
 \subsubsection{Done}
 \begin{itemize}
 \item The objective are to write the introduction and the background section
+\item We fix a weekly meeting all the Wednesday, starting the 1st July
 \end{itemize}
+
+\subsection{\date{Thursday, June 18, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item I have to write my introduction and background section
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I have choose to write my dissertation with LaTex on ShareLaTex
+\item I put in place the global directory architecture
+\item I wrote a beginning of introduction, but i don't really succeed to start
+\end{itemize}
+
+\subsection{\date{Friday, June 19, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Introduction \& Background section
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I have a good introduction, but i don't like the end and to opening to my dissertation.
+\item I start to list all the thing i have explain and put inside my background section
+\end{itemize}
+
+
+\subsection{\date{Saturday, June 20, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Introduction \& Background section
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I think my introduction is good
+\item My background section is pretty well advance, i have to check if i can't put more things in it, but the balance between what exactly i have to explain and what can be considered as known is not clear.
+\end{itemize}
+
+\subsection{\date{Sunday, June 21, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Introduction \& Background section
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I think my introduction and background section
+\end{itemize}
+
+\subsection{\date{Monday, June 22, 2015}}
+
+This week, i go back to France, so between the clean up of my house and moving back to France, i will not have the time to work on my project. Back to work next week.
+
+\subsection{\date{Sunday, June 28, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Summit
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I have summit my work on Moodle
+\end{itemize}
+
+\subsection{\date{Monday, June 29, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Work on the parser implementation
+\item Research on LR parser
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item My progress is pretty good, i have almost finish to write a lexer that will keep in track where i am in the file, so modification should be easier.
+\item LR parser seems to be simple on the principle (shift/reduce mostly), but i don't exactly understand the table that determine the action to do.
+\end{itemize}
+
+
+\subsection{\date{Wednesday, July 1, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Meeting with my tutor
+\item Continue working on the parser
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item Meeting : I have to change my introduction to be more precise and my background to define more some terms
+\item I continue my parser and implementing the creation of a "rules tree" from a programmatic defined grammar.
+\end{itemize}
+
+
+\subsection{\date{Thursday, July 2, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Continue working on the parser
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I correct a bug on the created grammar, mostly on the And \& Or rules
+\end{itemize}
+
+
+\subsection{\date{Saturday, July 4, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Update my introduction
+\item Continue working on the parser
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item The generated tree from the grammar looks good
+\item I change my introduction but i am not sure of myself, i will try to look at others dissertation \& thesis to see what is expected exactly.
+\end{itemize}
+
+
+\subsection{\date{Tuesday, July 7, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Update my background
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item my background section seems more consistent now. I add more references and much more definition of the terms i use.
+\end{itemize}
+
+
+\subsection{\date{Wednesday, July 8, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Meeting
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item The introduction \& background sections looks better, may be i need to re-do some part to be more precise and talk more about the subject in my introduction. I need to focus on the implementation now
+\end{itemize}
+
+
+\subsection{\date{Saturday, July 11, 2015}}
+
+\subsubsection{To do}
+\begin{itemize}
+\item Continue working on the parser
+\end{itemize}
+\subsubsection{Done}
+\begin{itemize}
+\item I have implement a basic top-down algorithm, bug still some bug
+\end{itemize}
+
 
 \section{Reference}
 \nocite{*}
